@@ -11,9 +11,22 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Wed, 28 Feb 2024 18:36:48 GMT</pubDate>
-      <lastBuildDate>Wed, 28 Feb 2024 19:34:13 GMT</lastBuildDate>
+      <pubDate>Wed, 28 Feb 2024 20:43:38 GMT</pubDate>
+      <lastBuildDate>Wed, 28 Feb 2024 20:58:23 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Wed, 28 Feb 2024 20:43:38 GMT</title>
+         <pubDate>Wed, 28 Feb 2024 20:43:38 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20240228204338</link>
+         <guid isPermaLink="false">20240228204338</guid>
+         <description>
+           <![CDATA[<pre>
+a/aaa_libraries-15.1-x86_64-27.txz:  Rebuilt.
+  Upgraded: liblzma.so.5.6.0, libcares.so.2.12.0, libpng16.so.16.43.0,
+  libunistring.so.5.1.0.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Wed, 28 Feb 2024 18:36:48 GMT</title>
          <pubDate>Wed, 28 Feb 2024 18:36:48 GMT</pubDate>
