@@ -1,20 +1,20 @@
-Wed Feb 28 18:42:18 UTC 2024
+Wed Feb 28 20:47:01 UTC 2024
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2024-02-28 18:36 .
+drwxr-xr-x 12 root root      4096 2024-02-28 20:43 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1141901 2024-02-26 20:14 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2024-02-26 20:14 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1143213 2024-02-28 18:42 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2024-02-28 18:42 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root    984952 2024-02-28 18:36 ./ChangeLog.txt
+-rw-r--r--  1 root root    985152 2024-02-28 20:43 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2024-02-23 20:36 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2024-02-23 20:36 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1491199 2024-02-26 20:14 ./FILELIST.TXT
+-rw-r--r--  1 root root   1495774 2024-02-28 18:42 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    901210 2024-02-28 18:41 ./PACKAGES.TXT
+-rw-r--r--  1 root root    901210 2024-02-28 20:46 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3629 2024-02-23 20:27 ./README.initrd
 -rw-r--r--  1 root root     34114 2023-12-11 20:35 ./README_CRYPT.TXT
@@ -683,22 +683,22 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2024-02-28 18:41 ./slackware64
--rw-r--r--  1 root root    351585 2024-02-28 18:41 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2024-02-28 18:41 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    435473 2024-02-28 18:41 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4575991 2024-02-28 18:41 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2024-02-28 20:46 ./slackware64
+-rw-r--r--  1 root root    351585 2024-02-28 20:46 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2024-02-28 20:46 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    435473 2024-02-28 20:45 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4576346 2024-02-28 20:45 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2024-02-26 20:12 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2024-02-28 20:45 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
 -rw-r--r--  1 root root       371 2024-02-02 21:24 ./slackware64/a/aaa_glibc-solibs-2.39-x86_64-1.txt
 -rw-r--r--  1 root root   2970056 2024-02-02 21:24 ./slackware64/a/aaa_glibc-solibs-2.39-x86_64-1.txz
 -rw-r--r--  1 root root       163 2024-02-02 21:24 ./slackware64/a/aaa_glibc-solibs-2.39-x86_64-1.txz.asc
--rw-r--r--  1 root root       413 2024-02-23 01:31 ./slackware64/a/aaa_libraries-15.1-x86_64-26.txt
--rw-r--r--  1 root root  11294412 2024-02-23 01:31 ./slackware64/a/aaa_libraries-15.1-x86_64-26.txz
--rw-r--r--  1 root root       163 2024-02-23 01:31 ./slackware64/a/aaa_libraries-15.1-x86_64-26.txz.asc
+-rw-r--r--  1 root root       413 2024-02-28 20:38 ./slackware64/a/aaa_libraries-15.1-x86_64-27.txt
+-rw-r--r--  1 root root  11294060 2024-02-28 20:38 ./slackware64/a/aaa_libraries-15.1-x86_64-27.txz
+-rw-r--r--  1 root root       163 2024-02-28 20:38 ./slackware64/a/aaa_libraries-15.1-x86_64-27.txz.asc
 -rw-r--r--  1 root root       503 2023-06-10 22:26 ./slackware64/a/aaa_terminfo-6.4_20230610-x86_64-1.txt
 -rw-r--r--  1 root root     53452 2023-06-10 22:26 ./slackware64/a/aaa_terminfo-6.4_20230610-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-06-10 22:26 ./slackware64/a/aaa_terminfo-6.4_20230610-x86_64-1.txz.asc
@@ -5744,11 +5744,11 @@ drwxr-xr-x   2 root root      4096 2023-03-08 20:34 ./slackware64/y
 -rw-r--r--   1 root root   1491108 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz
 -rw-r--r--   1 root root       163 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2024-02-28 18:42 ./source
--rw-r--r--   1 root root    614616 2024-02-28 18:42 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       163 2024-02-28 18:42 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    856286 2024-02-28 18:42 ./source/FILE_LIST
--rw-r--r--   1 root root  28117223 2024-02-28 18:42 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2024-02-28 20:47 ./source
+-rw-r--r--   1 root root    614616 2024-02-28 20:47 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       163 2024-02-28 20:47 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    856286 2024-02-28 20:46 ./source/FILE_LIST
+-rw-r--r--   1 root root  28132712 2024-02-28 20:46 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 124 root root      4096 2024-02-23 00:41 ./source/a
 -rw-r--r--   1 root root       339 2023-09-28 19:06 ./source/a/FTBFSlog
@@ -5759,10 +5759,10 @@ drwxr-xr-x   2 root root      4096 2022-02-15 18:15 ./source/a/aaa_base
 -rw-r--r--   1 root root       334 2021-07-17 17:46 ./source/a/aaa_base/os-release
 -rw-r--r--   1 root root       783 2018-02-27 06:13 ./source/a/aaa_base/slack-desc
 -rw-r--r--   1 root root        15 2021-07-17 17:46 ./source/a/aaa_base/slackware-version
-drwxr-xr-x   4 root root      4096 2022-09-15 18:28 ./source/a/aaa_libraries
--rwxr-xr-x   1 root root      4637 2024-02-23 01:31 ./source/a/aaa_libraries/aaa_libraries.SlackBuild
+drwxr-xr-x   4 root root      4096 2024-02-28 20:38 ./source/a/aaa_libraries
+-rwxr-xr-x   1 root root      4637 2024-02-28 20:38 ./source/a/aaa_libraries/aaa_libraries.SlackBuild
 -rwxr-xr-x   1 root root      1644 2021-10-26 20:12 ./source/a/aaa_libraries/display_orphans.sh
--rw-r--r--   1 root root       325 2022-09-15 18:24 ./source/a/aaa_libraries/doinst.sh.gz
+-rw-r--r--   1 root root       252 2024-02-28 14:35 ./source/a/aaa_libraries/doinst.sh.gz
 -rw-r--r--   1 root root       874 2021-02-07 22:21 ./source/a/aaa_libraries/slack-desc
 -rw-r--r--   1 root root      2164 2023-12-05 21:40 ./source/a/aaa_libraries/symlinks-to-tracked-libs
 drwxr-xr-x   2 root root      4096 2023-12-15 00:36 ./source/a/aaa_libraries/symlinks-to-tracked-libs-tmp.d
