@@ -1,3 +1,8 @@
+Wed Feb 28 20:43:38 UTC 2024
+a/aaa_libraries-15.1-x86_64-27.txz:  Rebuilt.
+  Upgraded: liblzma.so.5.6.0, libcares.so.2.12.0, libpng16.so.16.43.0,
+  libunistring.so.5.1.0.
++--------------------------+
 Wed Feb 28 18:36:48 UTC 2024
 d/parallel-20240222-noarch-1.txz:  Upgraded.
 kde/krita-5.2.2-x86_64-4.txz:  Rebuilt.
